2022-03-07  Julien Bect  <julien.bect@centralesupelec.fr>

	Contributing guidelines

	* .github/CONTRIBUTING.md: Explain the contribution process.
	* README.md: Link to CONTRIBUTING.md on GitHub.

2022-03-04  Julien Bect  <julien.bect@centralesupelec.fr>

	Fix more linter warnings

	* admin/stk_mlint_all.m: Display critical errors separately.  Add
	'EXIST' and 'NOSEL' to the list of critical errors.
	* misc/parallel/@stk_parallel_engine_parfor/stk_parallel_engine_parfor.m:
	Fix warnings.
	* misc/test/stk_isequal_tolabs.m: Idem.
	* misc/test/stk_isequal_tolrel.m: Idem.
	* misc/test/stk_test.m: Idem.
	* sampling/stk_sampling_nestedlhs.m: Idem.

2022-03-03  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_testfun_hartman4s.m: Scaled Hartman4 test function

	* examples/test_functions/stk_testfun_hartman4s.m: New test
	function ("scaled Hartman4") from Picheny et al (2013).
	* admin/octpkg/INDEX: Update Octave package index.

2022-02-27  Julien Bect  <julien.bect@centralesupelec.fr>

	README.md: Prefer triple backquotes

	* README.md: Prefer triple backquotes to emphasize commands
	to be typed.

2022-02-23  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_init.m: Update the list of functions that contain persistents

	* stk_init.m (stk_init__clear_persistents): Update the list of
	functions that contain persistent variables.

2022-02-15  Julien Bect  <julien.bect@centralesupelec.fr>

	README.md: Explain how to initialize STK when using the PCT

	* README.md: Explain how to initialize STK when using the Parallel
	Computing Toolbox in Matlab, by means of the `pctRunOnAll` function.
	* NEWS.md: Advertise the change.

	Remove two deprecated functions

	* misc/optim/stk_optim_hasfmincon.m: Remove deprecated function.
	* misc/optim/stk_select_optimizer.m: Remove deprecated function.
	* admin/octpkg/INDEX: Update Octave package index.
	* admin/build_tools/build_octpkg.m: Update build process.
	* NEWS.md: Advertise the removal.
